# CaloOptimization

./: .gitmodules  env.sh
cpp/: BoxyDetectorConstruction.cc  BoxyDetectorConstruction.hh  CMakeLists.txt  CustomEventAction.cc  CustomSteppingAction.cc  DetectorConstruction.cc  DetectorConstruction.hh  HeterogeneousSamplingCalorimeter.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  SlimFilmSensitiveDetector.cc  SlimFilmSensitiveDetector.hh  main.cc
cuda/fasthits/: setup.cfg
more/fasthits/: pyproject.toml  setup.py
more/fasthits/fastsum/extensions/: fast_sum.cpp  fast_sum_kernel.cu
python/lib/: heterogeneous_sampling_calorimeter.py  neural_calibration.py
python/tests/: benchmark_add.py
