[metadata]
name = ml4reco_modules
version = 1.0.0
author = Shah Rukh Qasim
author_email = shah.rukh.qasim@cern.ch
description = Fast calo
keywords = calo
license = XXX
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.6
install_requires =
    torch>=2.4.0
    torchvision>=0.19.0


[options.extras_require]
test =
    pytest
    pytest-cov
    scipy

[options.package_data]
* = *.txt, *.rst, *.md


[sdist]
formats = zip, gztar

[bdist_wheel]
universal = 1
